# tennis_accounting_for_payments

./: .env.compose.example  .env.example  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  Makefile  README.md  alembic.ini  docker-compose.yaml  nixpacks.toml  pyproject.toml  railway.json
.github/workflows/: lint.yaml
docker/: Dockerfile  entrypoint.sh
docker/backend/: .env.local
docker/loki/config/: local-config.yaml
docker/mariadb/: .env.local
docker/postgresql/: .env.local
docker/promtail/config/: promtail-config.yaml
docs/: erd.puml
src/: _settings.py  constants.py  constants_text.py  db_manager.py  settings.py  tg_main.py
src/commands/: __init__.py  add_client.py  add_coach.py  add_payment.py  add_payments.py  add_visits.py  create_report.py  errors.py  get_monthly_payments.py  get_monthly_visits.py  get_number_of_tennis_training_available.py  get_remains.py  help.py  processing_user_response.py  start.py
src/commands/utils/: payment_utils.py
src/constants/: cell_hieght.py  colors.py  column_widths.py  custom_types.py  error_map.py  locales.py  messages.py  offsets.py  paths.py  prices.py  regular_expressions.py  xlsx_config.py
src/database/migrations/: env.py
src/database/models/: __init__.py  _universal_type_annotations.py  base.py  model.py  models.py
src/database/repositories/: absctract_repository.py  abstract_manager.py  admin_repository.py  client_repository.py  coach_repository.py  manager.py  monthly_visits_repository.py  number_of_tennis_training_available_repository.py  payment_repository.py  remains_repository.py  user_repository.py  visits_repository.py
src/decorators/: checking_permissions.py  error_handler.py  singleton.py
src/dispatcher/: dispatcher.py
src/events/: abc.py  base.py  func_call.py  utils.py
src/exceptions/: access_control_exceptions.py  entity_exceptions.py  user_exception.py  validation_exceptions.py
src/facade/: add_payments_facade.py
src/handlers/: base.py
src/handlers/add_client/: add_client.py
src/handlers/add_coach/: add_coach.py
src/handlers/add_payments/: add_payments.py  create_payments.py
src/handlers/add_visits/: add_visits.py
src/handlers/create_payment/: create_payment.py
src/handlers/create_report/: create_report.py
src/handlers/get_client_number_of_tennis_training_available/: get_client_number_of_tennis_training_available.py
src/handlers/get_client_payments_in_some_months/: get_monthly_payments.py
src/handlers/get_client_visits_in_some_months_service/: get_monthly_visits.py
src/handlers/get_monthly_payments/: get_monthly_payments.py
src/handlers/get_monthly_visits/: get_monthly_visits.py
src/handlers/get_number_of_tennis_training_available/: get_number_of_tennis_training_available.py
src/handlers/get_remains/: get_remains.py
src/handlers/help/: help_handler.py  text.py
src/handlers/start/: start_handler.py
src/middleware/: error_handler_middleware.py
src/schemas/enums/: admin_roles.py  base.py  specializations.py  training_type.py  training_types.py
src/schemas/payload/: base.py
src/schemas/response/: base.py
src/sentry/: sentry.py
src/services/collect_client_data_service/: abc.py  facade.py
src/utils/: check_entity_exists.py  create_answer_about_monthly_payments.py  create_answer_about_monthly_visits.py  create_answer_about_number_training.py  get_entity.py  get_first_day_of_current_month.py  get_last_day_of_current_month.py  get_number_of_days_in_month.py  get_training_type_by_amount.py
system/: Dockerfile  entrypoint.sh
(+86 files in other folders)
