[tool.poetry]
name = "tennis-accounting-for-payments"
version = "0.1.0"
description = ""
authors = ["QdMiracle <qdmiracle21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openpyxl = "^3.1.5"
babel = "^2.15.0"


[tool.poetry.group.lint.dependencies]
black = "^24.8.0"
ruff = "^0.5.6"
isort = "^5.13.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
